# deep-reader

./: .gitignore  CHANGELOG.md  DESIGN_V2.md  PLAN.md  README.md  pyproject.toml
deep_reader/: __main__.py  chunker.py  cli.py  config.py  llm.py  markdown.py  mcp_server.py  reader.py  references.py  search.py  state.py  thread_utils.py  watcher.py  wiki.py
deep_reader/prompts/: annotate.txt  compile_concept.txt  connect_new_threads.txt  connect_thread.txt  consolidate.txt  critique.txt  extract.txt  extract_code.txt  fast_path.txt  predict.txt  query_answer.txt  query_route.txt  synthesize.txt
deep_reader/sources/: base.py  code.py  meeting.py  pdf.py  text.py
deep_reader/steps/: __init__.py  actions.py  annotate.py  calibrate.py  connect.py  consolidate.py  extract.py  fast_path.py  people.py  predict.py  synthesize.py
tools/: chat.py  compile_concepts.py  critique.py  enrich.py  health_check.py  ingest_books.py  ingest_file.py  query.py  rebuild_indexes.py  rebuild_stubs.py  recap_prep.py  reconnect_threads.py  regenerate_threads.py  sync_recap.py
