[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-reader"
version = "2.0.0"
description = "Cross-functional knowledge base compiler — iterative reading, people + action-item extraction, MCP chat."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "pymupdf4llm>=0.0.5",
    "click>=8.0",
    "anthropic>=0.25",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
docx = ["python-docx>=1.1"]
full = ["mcp>=1.0", "python-docx>=1.1"]

[project.scripts]
deep-reader = "deep_reader.cli:main"

[tool.setuptools.packages.find]
include = ["deep_reader*"]

[tool.setuptools.package-data]
deep_reader = ["prompts/*.txt"]
